--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,20 @@
 ---
 name: Math-Primality
-version: 0.02
+version: 0.03_01
 author:
   - 'Jonathan Leto <jonathan@leto.net>'
 abstract: Advanced Primality Algorithms using GMP
 license: perl
 resources:
   license: ~
-build_requires:
+requires:
   Math::GMPz: 0.26
+build_requires:
   Test::More: 0
 provides:
   Math::Primality:
     file: lib/Math/Primality.pm
-    version: 0.02
+    version: 0.03_01
 generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
