--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
+language: "perl"
 before_script:
-    - sudo apt-get install liblocal-lib-perl libgmp3-dev
-    - curl -L http://cpanmin.us | sudo perl - --self-upgrade
-    - perl -Mlocal::lib >> /tmp/local_lib_junk.sh && source /tmp/local_lib_junk.sh
-    - export CI_USER=$USER
-    - sudo chown -R $CI_USER ~/.cpanm ~/perl5
+#    - sudo apt-get install liblocal-lib-perl libgmp3-dev
+    - sudo apt-get install libgmp3-dev
+#    - curl -L http://cpanmin.us | sudo perl - --self-upgrade
+#    - perl -Mlocal::lib >> /tmp/local_lib_junk.sh && source /tmp/local_lib_junk.sh
+#    - export CI_USER=$USER
+#    - sudo chown -R $CI_USER ~/.cpanm ~/perl5
     - cpanm Test::Pod
-script: "cpanm --installdeps .; perl Build.PL; ./Build test"
+script: "perl Build.PL; ./Build test"
 # branches:
 #   only:
 #     - master
