--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: "perl"
+perl:
+  - "5.14"
+  - "5.12"
+  - "5.10"
 before_script:
-#    - sudo apt-get install liblocal-lib-perl libgmp3-dev
     - sudo apt-get install libgmp3-dev
-#    - curl -L http://cpanmin.us | sudo perl - --self-upgrade
-#    - perl -Mlocal::lib >> /tmp/local_lib_junk.sh && source /tmp/local_lib_junk.sh
-#    - export CI_USER=$USER
-#    - sudo chown -R $CI_USER ~/.cpanm ~/perl5
-    - cpanm Test::Pod
+    - cpanm Test::Pod # optional dependency
 script: "perl Build.PL; ./Build test"
 # branches:
 #   only:
