Continue to make dzil happy

--- a/dist.ini
+++ b/dist.ini
@@ -28,9 +28,9 @@ filenames = Build.PL
 
 [PodWeaver]
 
-[Prereq / BuildRequires]
+[Prereqs / BuildRequires]
 Test::More      = 0
 Test::Exception = 0
 
-[Prereq / ConfigureRequires]
+[Prereqs / ConfigureRequires]
 Module::Build   = 0.38
