[dzil] Use PkgVersion to inject VERSION and remove manual declaration from Math::Primality::AKS

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,8 @@ license          = Perl_5
 copyright_holder = Leto Labs LLC
 copyright_year   = 2012
 
+[PkgVersion]
+
 [MetaResources]
 homepage        = http://github.com/leto/math--primality
 repository.web  = http://github.com/leto/math--primality
