Optimize prime_count with Rmpz_gci_ui, which requires Math::GMPz >= 0.34, @danaj++, #2

--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,9 @@ first_version = 0.05
 
 [PodWeaver]
 
+[Prereqs]
+Math::GMPz = 0.34
+
 [Prereqs / BuildRequires]
 Test::More      = 0
 Test::Exception = 0
