[travis] Newer Math::GMPz's require GMP 4.2.x or higher and install build time deps at the proper time

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
-before_script:
-    - sudo apt-get install libgmp3-dev
+
+before_install:
+    - sudo apt-get install libgmp4-dev
     - cpanm Test::Pod # optional dependency
 
 install:
