--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ perl:
   - "5.14"
   - "5.12"
 
-
 before_install:
-    - sudo apt-get install libgmp-dev
+    - sudo apt-get update -q
+    - sudo apt-get install -t libgmp-dev
     - cpanm Test::Pod # optional dependency
 
 install:
