--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
     - cpanm Test::Pod # optional dependency
 
 install:
-    - cpanm -v --installdeps --notest --mirror http://cpan.mirrors.travis-ci.org .
+    - cpanm -v --installdeps --notest .
 
 script: "perl Build.PL; ./Build test"
 # branches:
