specify 'bytes' encoding in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,12 @@ first_version = 0.05
 
 [@Basic]
 
+; https://contourline.wordpress.com/2015/02/16/non-obvious-fix-to-a-dzil-problem/
+; https://github.com/rjbs/Dist-Zilla/pull/422#
+[Encoding]
+encoding = bytes
+match    = zip
+
 [AutoPrereqs]
 
 [PodWeaver]
